# mini_ds_lib

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  auto_ml.py  config.py
models/model_registry/: __init__.py  classification_models.py  forecasting_models.py  regression_models.py
