[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini_ds_lib"
version = "0.1.0"
description = "Mini Data Science Workflow Library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "lordharbar", email = ""},
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
    "torch>=2.0.0",
    "prophet>=1.1.0",
    "neuralprophet>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true